css/main.scss
---
---
@import url('https://fonts.googleapis.com/css?family=Nunito:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic');

$items: 3;
$transition-duration: 0.5s;
$transition-delay: 0.05s;

* {
  box-sizing: border-box;
}

html, body {
  font-family: 'Nunito', sans-serif;
  margin: 0;
  padding: 0;
}

body {
  display: grid;
  grid-template-columns: 1fr 3fr;
  grid-template-rows: 70vh auto auto auto;
  grid-template-areas:
    "hero hero"
    "navigation navigation"
    "pinned pinned"
    "content content"
    "footer footer";
  background: white;
}

.hero {
  font-family: 'Nunito', sans-serif;
  grid-area: hero;
  background: lightgray;
  vertical-align: middle;
  display: flex;
  justify-content: center;
  align-items: center;
}

.splash {
  position: absolute;
  width: 50%;
  z-index: 2;
}

#particles-js {
  height: 50%;
  position: absolute;
  z-index: 1;
}

a {
  text-decoration: none;
}

.navigation {
  grid-area: navigation;
}

$p: 12px;
$w: 100%;
$n: 5;
$e: cubic-bezier(0,.5,.5,1.1);
$grey: #A6ADA7;
$pink: #F5C8BF;
$green: #AEBFAF;
$mint: #f2faf3;

nav {
  font-family: 'Nunito';
  position: relative;
  animation: bounceInUp 1000ms linear 500ms forwards;
  label, a {
    transition: all 150ms ease-out;
    cursor: pointer;
    display: flex;
    align-items: center;
    align-content: center;
    height: 48px;
    width: $w;
    padding: 0 $p;
    background: white;
    border: 2px solid $grey;
    border-radius: 2px;
    font-size: 18px;
    font-weight: 600;
    letter-spacing: -1px;
  }
  a {
    &:hover, &:focus {
      border-color: mix($mint, $green);
    }
    &:active {
      border-color: $pink;
    }
  }
  label {
    position: relative;
    &:before, &:after {
      transition: all 150ms ease-out;
      content: "";
      display: block;
      position: absolute;
      width: 2px;
      height: 12px;
      background: $grey;
      border-radius: 2px;
    }
    &:before {
      transform: rotate(-45deg);
    }
    &:after {
      transform: rotate(45deg);
    }
    &.down {
      &:before, &:after {
        transform-origin: center 11px;
        top: 50%;
        margin-top: -6px;
        right: 20px;
      }
    }
    &.right {
      &:before, &:after {
        transform-origin: left center;
        top: 50%;
        right: 20px;
      }
      &:before {
        margin-top: -9px;
      }
      &:after {
        margin-top: -3px;
      }
    }
  }
  > label {
    transform: translateZ(1px);
    z-index: 1;
  }
  ul {
    will-change: visibility;
    transition: visibility 0ms ease-out 600ms;
    visibility: hidden;
    z-index: 1;
    li {
      will-change: transform, opacity;
      padding: $p/3 0;
      opacity: 0;
      @for $i from 1 through $n {
        &:nth-child(#{$i}) {
          transition: transform 150ms $e #{-($i - $n - 1)*100}ms, opacity 100ms ease-out #{-($i - $n - 1)*100}ms;
        }
      }
    }
  }
  > ul {
    position: relative;
    padding-top: $p/3;
    > li {
      transform: translateY(-100%);
      > label {
        transform: translateZ(0.5px);
      }
    }
    ul {
      position: absolute;
      top: 0;
      //right: calc(-$w - $p/1.5);
      > li {
        transform: translateX(-100%);
      }
    }
  }
  input {
    cursor: pointer;
    appearance: none;
    opacity: 0;
    position: absolute;
    width: $w;
    height: 48px;
    margin: 0;
    &:hover, &:focus {
      ~ label {
        border-color: mix($mint, $green);
      }
    }
    &:active {
      ~ label {
        border-color: $pink;
      }
    }
    &:checked {
      ~ label {
        border-color: $green;
        &.down {
          &:before, &:after {
            margin-top: -16px;
          }
          &:before {
            transform: rotate(-135deg);
          }
          &:after {
            transform: rotate(135deg);
          }
        }
        &.right {
          &:before {
            transform: rotate(45deg);
            margin-top: -11px;
        }
          &:after {
            transform: rotate(-45deg);
            margin-top: -2px;
          }
        }
      }
      ~ ul {
        visibility: visible;
        transition: visibility 0ms ease-out 0ms;
        > li {
          opacity: 1;
          transform: none;
          @for $i from 1 through $n {
            &:nth-child(#{$i}) {
              transition: transform 150ms $e #{$i*100}ms, opacity 100ms ease-out #{$i*100}ms;
            }
          }
        }
      }
    }
  }
  > input {
    z-index: 2;
    top: 0;
    left: 0;
    &:not(:checked) {
      ~ ul {
        > li {
          input:checked ~ ul {
            li {
              opacity: 0;
              transform: translateX(-100%);
              @for $i from 1 through $n {
                &:nth-child(#{$i}) {
                  transition: transform 150ms $e #{-($i - $n - 1)*100}ms, opacity 100ms ease-out #{-($i - $n - 1)*100}ms;
                }
              }
            }
          }
        }
      }
    }
  }
}

.pinned-items {
  grid-area: pinned;
  background: white;
}

.footer {
  text-align: center;
  grid-area: footer;
  background: gray;
}

.content {
  grid-area: content;
  background: white;
}

.button {
    font-family: Nunito;
    position: absolute;
    border: 3px solid lightgray;
    color: lightgray;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    border-radius: 12px;
    z-index: 2;
    -webkit-transition-duration: 0.2s;
    transition-duration: 0.2s;
    cursor: pointer;
}

.button:hover {
  color: white;
  border: 3px solid white;
  background-color: #000025;
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
}


.superegg {

}


.post {
  width:100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin-top: 20px;
}

.preview {
  min-height: 55px;
  background-color: #faf6ec;
  width:100%;
  display: flex;
  flex-direction: row;
  z-index: 1000;
  align-items: center;
  text-align: center;
  vertical-align: middle;
}

.preview__image:before {
  width: 100%;
  padding-bottom: 100%;
}

.preview__image {
  background-color: black;
  border-radius: 50%
}

.preview__blurb {
text-align: center;
}

.text {
  font-family: 'Nunito';
  width: 100%;
  background-color: #faf6ec;
}

.posts {
  padding-left:0;
}


@keyframes reveal-text {
	from {
		clip-path: inset(0 100% 0 0);
	}
	to {
		clip-path: inset(0 0 0 0);
	}
}


@keyframes revealer-text {

	0%, 50% {
		transform-origin: 0 50%;
	}

	60%, 100% {
		transform-origin: 100% 50%;
	}


	60% {
		transform: scaleX(1);
	}

	100% {
		transform: scaleX(0);
	}
}

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

@media (min-width: 1100px) {
  body {
    grid-template-rows: 100vh auto auto 200px;
    grid-template-areas:
      "hero hero"
      "navigation content"
      "pinned content"
      "footer footer"
  }

  .posts{
    flex-direction: column;
    width: 100%;
  }

  .post {
    flex-direction: row;

  }

  .post:nth-of-type(even){
    flex-direction: row-reverse;
  }

  .preview {
    height: 220px;
    width: 30%;
    margin-right: 10px;
    margin-left: 10px;
    position: relative;
    background-color: #faf6ec;
    display: flex;
    flex-direction: column;
    border-radius: 20%/20%;
    z-index: 1000;
  }

  .preview::before {
    border-radius: 2%/30%;
  }

  .preview::after {
    border-radius: 30%/2%;
  }

  .text {
    width: auto;
    display: flex;
    align-items: center;
    line-height: 100%;
    background-color: #faf6ec;
    border-radius: 12px;
    z-index: 1000;
  }

  .superegg {
      width:220px;
      height:220px;
      border-radius:20%/20%;
      background-color: #faf6ec;
      position:relative;
      z-index: 3
  }

  .superegg::before, .superegg::after {
      content:'';
      position:absolute;
      z-index:-1;
  }

  .superegg::before {
      border-radius: 2%/30%;
      top: 33px;
      bottom: 33px;
      right: -2px;
      left: -2px;
  }

  .superegg::after {
      border-radius: 30%/2%;
      left: 33px;
      right: 33px;
      top: -2px;
      bottom: -2px;
  }

  #particles-js {
    height: 100%
  }
}

